# hydrosim

./: .gitattributes  .gitignore  BlueMountains_Reservoir_2020.hydrosim  Hawkesbury_Water_Balance_2020.hydrosim  LICENSE  README.md  download_fonts.py  make_example.py  make_reservoir_example.py  pyproject.toml  test_isolated.py
.claude/: settings.local.json
00_instructions/: 01_HydroSim_PRD_Phase1.md  02_HydroSim_AppFlow.md  03_HydroSim_TechStack.md  04_HydroSim_DesignSystem.md  06_HydroSim_BackendSchema.md  07_HydroSim_ImplementationPlan.md
01_design_handoff/: README.md
01_design_handoff/project/: HydroSim.html  app.jsx  dialogs.jsx  elements.jsx  styles.css  viewer.jsx
hydrosim/: __init__.py  __main__.py  app.py
hydrosim/engine/: parser.py  results.py  runner.py  solver.py
hydrosim/gui/: main_window.py  simulation_thread.py
hydrosim/gui/canvas/: connection_item.py  element_item.py  port_item.py  scene.py  view.py
hydrosim/gui/dialogs/: __init__.py  constant_dialog.py  expression_dialog.py  reservoir_dialog.py  sim_settings_dialog.py  timehistory_dialog.py  timeseries_dialog.py  waterstore_dialog.py
hydrosim/gui/palette/: palette_panel.py
hydrosim/gui/results/: hydrograph_widget.py
hydrosim/gui/styles/: stylesheet.qss  theme.py
hydrosim/model/: base.py  graph.py  serialiser.py  validator.py
hydrosim/model/elements/: __init__.py  constant.py  expression.py  reservoir.py  timehistory.py  timeseries.py  waterstore.py
hydrosim/resources/examples/: simple_water_balance.hydrosim
tests/test_elements/: test_constant.py  test_expression.py  test_reservoir.py  test_timehistory.py  test_timeseries.py  test_waterstore.py
tests/test_engine/: test_parser.py  test_runner.py  test_solver.py
tests/test_model/: test_graph.py  test_serialiser.py  test_validator.py
