[tool.poetry]
name = "hydrosim"
version = "0.1.0"
description = "Open-source probabilistic hydrological simulation platform"
authors = ["HydroSim Contributors"]
license = "MIT"
readme = "README.md"
keywords = ["hydrology", "simulation", "water resources", "rainfall-runoff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
packages = [{include = "hydrosim"}]

[tool.poetry.scripts]
hydrosim = "hydrosim.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
PyQt6 = "~=6.6"
pyqtgraph = "~=0.13"
matplotlib = "~=3.8"
numpy = "~=2.0"
scipy = "~=1.13"
pandas = "~=2.1"
networkx = "~=3.2"
pydantic = "~=2.5"
# simpleeval removed — replaced by stdlib ast + eval with restricted namespace

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-qt = ">=4.2"
pytest-cov = ">=4.1"
black = ">=24.0"
ruff = ">=0.3"
mypy = ">=1.8"
pre-commit = ">=3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_imports = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["hydrosim"]
omit = ["hydrosim/gui/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
